added images and content to the monuments page.

--- a/history.html
+++ b/history.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Miami - History</title>
 </head>
 <body>
-    
+    <p>Miami, Florida - USA</p>
+    <ul>
+        <li><a href="history.html">History and legends</a></li>
+        <li><a href="toponomy.html">Toponomy</a></li>
+        <li><a href="people.html">Notable People</a></li>
+        <li><a href="monuments.html">Monuments</a></li>
+    </ul>
+
 </body>
 </html>
