--- a/monuments.html
+++ b/monuments.html
@@ -4,9 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Miami - Monuments</title>
 </head>
 <body>
-    
+    <p>Miami, Florida - USA</p>
+    <ul>
+        <li><a href="history.html">History and legends</a></li>
+        <li><a href="toponomy.html">Toponomy</a></li>
+        <li><a href="people.html">Notable People</a></li>
+        <li><a href="monuments.html">Monuments</a></li>
+    </ul>
+    <h1>Monuments of Miami</h1>
+    <p></p>
+    <p>Rubén Villar</p>
+    <p>13/10/2022</p>
+    <h2>The Holocaust Memorial</h2>
+    <p>The most striking part of the Miami Holocaust Monument is a 13 metre bronze 
+        hand, over which clamber hundreds of tormented human shapes. The figures are
+         carefully sculpted, and in their detail powerfully transmit the despair and
+          anguish of the subject matter.</p>
+    <p>The monument also includes a dark stone tunnel, with the names of the 
+        concentration camps carved into the walls, as a representation of the 
+        solitude and isolation the Jews felt during their persecution.</p>
+    <p>An enormous wall nearby also bears the names of the millions of victims to 
+        have died during the atrocity.</p>
+    <img src="images/holocaust_monument.jpg" alt="Picture of the Holocaust Monument" width="1024">
+    <p><em>Holocaust monument - Photo taken by <a href="https://www.flickr.com/photos/southbeachcars/">Phillip Pessar</a> under the 
+        <a href="https://creativecommons.org/licenses/by/2.0/">Creative Commons</a> license.</em></p>
+    <h2>Torch of Friendship</h2>
+    <p>The Torch of Friendship is a monument built in 1960 located at the northwest 
+        corner of Bayfront Park in Downtown Miami.</p>
+    <p>The Torch of Friendship was built to signify the passageway for immigrants coming 
+        from Latin America and the Caribbean. The gas fed flame was meant to act as a 
+        welcoming beacon for all new and old immigrants to the nation. 
+        In 1964 it was re-dedicated to the memory of President John F. Kennedy.</p>
+    <p>It consists of a pillar, covered with stone plates and topped by a burning torch. 
+        It holds a plate with the Great Seal of the United States at the front. 
+        Underneath a plate holds a caption in which the city of Miami dedicates this 
+        monument to the friendship between the US and the Latin American countries. 
+        It also has the year of construction, 1960.</p>
+    <p>The pilar is escorted by a curved wall in which appears the re-dedication of the monument, 
+        in memory of John F. Kennedy. To its right, the words TORCH OF FRIENDSHIP appear 
+        above 20 round plates showing the coat of arms and names of Latin American countries.</p>
+    <img src="images/the_torch_of_friendship.jpg" alt="Picture of the Holocaust Monument" width="1024">
+    <p><em>The Torch of Friendship - Photo taken by <a href="https://www.flickr.com/photos/southbeachcars/">Phillip Pessar</a> under the 
+        <a href="https://creativecommons.org/licenses/by/2.0/">Creative Commons</a> license.</em></p>
+    <h3>Statue dedicated to Simón Bolívar</h3>
+    <p>The statue of Simón Bolívar was dedicated in Bayfront Park on December 17, 1984.</p>
+    <p>It watextarea>s a gift from the government of Venezuela in 1979 and was stored in a Miami warehouse for 
+        several years before being dedicated. After the redevelopment of the park the bronze 
+        figure was renovated and rededicated in 1991 in the northern end of the park alongside 
+        the Torch of Friendship.</p>
+        <img src="images/simon_bolivar.jpg" alt="Picture of the Holocaust Monument" width="1024">
+    <p><em>Simón Bolívar Statue - Photo taken by <a href="https://www.flickr.com/photos/wallyg/">Wally Gobetz</a> under the 
+        <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/">Creative Commons</a> license.</em></p>
+    <p>Copyright</p>
 </body>
 </html>
