added format to the webpage.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
     <title>Miami</title>
 </head>
 <body>
-    <p>Miami, Florida - USA</p>
-    <ul>
-        <li><a href="history.html">History and legends</a></li>
-        <li><a href="toponomy.html">Toponomy</a></li>
-        <li><a href="people.html">Notable People</a></li>
-        <li><a href="monuments.html">Monuments</a></li>
-    </ul>
-    
+    <header>
+        <p>Miami, Florida - USA</p>
+        <nav>
+            <ul>
+                <li><a href="history.html">History and legends</a></li>
+                <li><a href="toponomy.html">Toponomy</a></li>
+                <li><a href="people.html">Notable People</a></li>
+                <li><a href="monuments.html">Monuments</a></li>
+            </ul>
+        </nav>
+    </header>
+</header>
 </body>
 </html>
