--- a/monuments.html
+++ b/monuments.html
@@ -88,7 +88,7 @@
         </section>
     </main>
     <footer>
-        <p>Copyright</p>
+        <p>Some Rights Reserved</p>
     </footer>
 </body>
 
